# large-file-parser-ng

./: .gitignore  Makefile  README.md  large-file-parser-ng.cabal
app/: DumbFileParser.hs  FileWriter.hs  SmartFileParser.hs  StreamingFileParser.hs
src/: Types.hs
