name:                large-file-parser-ng
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cdepillabout/large-file-parser-ng#readme
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          example@example.com
copyright:           2017 Dennis Gosnell
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction

executable large-file-writer
  hs-source-dirs:      app
  main-is:             FileWriter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  build-depends:       base
                     , bytestring
                     , conduit-combinators
                     , exceptions
                     , monad-control
                     , large-file-parser-ng
                     , resourcet
                     , text
  default-language:    Haskell2010

executable large-file-dumb-parser
  hs-source-dirs:      app
  main-is:             DumbFileParser.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  build-depends:       base
                     , bytestring
                     , large-file-parser-ng
                     , parsec
                     , text
  default-language:    Haskell2010

executable large-file-streaming-parser
  hs-source-dirs:      app
  main-is:             StreamingFileParser.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  build-depends:       base
                     , attoparsec
                     , conduit-combinators
                     , conduit-extra
                     , exceptions
                     , monad-control
                     , large-file-parser-ng
                     , resourcet
  default-language:    Haskell2010

executable large-file-smart-parser
  hs-source-dirs:      app
  main-is:             SmartFileParser.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  build-depends:       base
                     , large-file-parser-ng
                     , parsec
                     , text
  default-language:    Haskell2010

test-suite large-file-parser-ng-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , large-file-parser-ng
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cdepillabout/large-file-parser-ng
